# srvgame

./: .gitignore  ARCHITECTURE_DIAGRAM.md  CMakeLists.txt  README.md  build.sh
.github/workflows/: codacy.yml  codeql.yml
clients/agdk-imgui/include/: GameClient.hpp  NetworkClient.hpp  WebSocketNetworkClient.hpp
clients/agdk-imgui/src/: GameClient.cpp  NetworkClient.cpp  WebSocketNetworkClient.cpp
clients/godot/: .gitignore  export_presets.cfg  main.gd  main.gd.uid  main.tscn  project.godot
clients/godot/config/: loader.gd  loader.gd.uid
clients/godot/entities/: ents.gd  ents.gd.uid
clients/godot/materials/: mob.tres  npc.tres  player.tres  stone.tres  terrain.tres  tree.tres  water.tres
clients/godot/models/: generator.gd  generator.gd.uid
clients/godot/network/: networks.gd  networks.gd.uid
clients/godot/player/: controller.gd  controller.gd.uid  weapons.gd  weapons.gd.uid
clients/godot/shaders/: terrain.gdshader  terrain.gdshader.uid  water.gdshader  water.gdshader.uid
clients/godot/ui/: hud.gd  hud.gd.uid  login_menu.gd  login_menu.gd.uid  menu.gd  menu.gd.uid  pause_menu.gd  pause_menu.gd.uid  settings_menu.gd  settings_menu.gd.uid  uiface.gd  uiface.gd.uid
clients/godot/user/: settings.cfg
clients/godot/world/: chunk.gd  chunk.gd.uid  terrain.gd  terrain.gd.uid  world.gd  world.gd.uid
clients/ogre3d-py/: main.py  requirements.txt
clients/ogre3d-py/config/: network.json
clients/ogre3d-py/network/: __init__.py  tcp_udp_client.py  websocket_client.py
clients/wx-cpp/: CMakeLists.txt  STRUCTURE.md
clients/wx-cpp/include/core/: GameClient.hpp
clients/wx-cpp/include/network/: NetworkClient.hpp  WebSocketClient.hpp
clients/wx-cpp/src/core/: GameClient.cpp  GameWorld.cpp
clients/wx-cpp/src/network/: NetworkClient.cpp  WebSocketClient.cpp
clients/wx-cpp/src/scripting/: PythonScriptManager.cpp
config/: config.json  core.json  loot_tables.json
dbschema/: citus.sql  postgres.sql  sqlite.sql
include/config/: ConfigManager.hpp
include/database/: Backend.hpp  CitusBackend.hpp  CitusClient.hpp  DbManager.hpp  DbService.hpp  PostgreSQLBackend.hpp  PostgreSqlClient.hpp  SQLProvider.hpp  SQLiteClient.hpp
include/game/: ChunkCache.hpp  ChunkLOD.hpp  ChunkPool.hpp  ChunkStreamer.hpp  CollisionSystem.hpp  EntityManager.hpp  GameData.hpp  GameEntity.hpp  GameLogic.hpp  InventorySystem.hpp  LogicCore.hpp  LogicEntity.hpp  LogicWorld.hpp  LootItem.hpp  LootTable.hpp  LootTableManager.hpp  MobSystem.hpp  NPCEntity.hpp  NPCSystem.hpp  Player.hpp  PlayerEntity.hpp  PlayerManager.hpp  PlayerTypes.hpp  QuestManager.hpp  QuestSystem.hpp  RAIIThread.hpp  SkillSystem.hpp  SpatialGrid.hpp  WorldChunk.hpp  WorldGenerator.hpp
include/logging/: Logger.hpp
include/network/: BinaryProtocol.hpp  BinarySession.hpp  ClientListener.hpp  ClientServer.hpp  ConnectionManager.hpp  GameServer.hpp  GameSession.hpp  IConnection.hpp  MasterRouter.hpp  MasterServer.hpp  NetworkQualityMonitor.hpp  PredictionSystem.hpp  WebSocketProtocol.hpp  WebSocketSession.hpp
include/process/: IPCChannel.hpp  ProcessPool.hpp
include/scripting/: PythonAPI.hpp  PythonEvent.hpp  PythonModule.hpp  PythonScripting.hpp
include/utils/: Converters.hpp  Passwords.hpp  WArray.hpp
scripts/: game_events.py  gameserver.py  loot_handlers.py
src/: main.cpp
src/config/: ConfigManager.cpp
src/database/: Backend.cpp  CitusBackend.cpp  CitusClient.cpp  DatabaseBackend.cpp  DbManager.cpp  DbService.cpp  Pool.cpp  PostgreSQLBackend.cpp  PostgreSqlClient.cpp  SQLProvider.cpp  SQLiteClient.cpp
src/game/: ChunkCache.cpp  ChunkLOD.cpp  ChunkPool.cpp  ChunkStreamer.cpp  CollisionSystem.cpp  EntityManager.cpp  GameEntity.cpp  GameLogic.cpp  InventorySystem.cpp  LogicCore.cpp  LogicEntity.cpp  LogicWorld.cpp  LootItem.cpp  LootTable.cpp  LootTableManager.cpp  MobSystem.cpp  NPCEntity.cpp  NPCSystem.cpp  Player.cpp  PlayerEntity.cpp  PlayerManager.cpp  QuestManager.cpp  QuestSystem.cpp  SkillSystem.cpp  SpatialGrid.cpp  WorldChunk.cpp  WorldGenerator.cpp
src/logging/: Logger.cpp
src/network/: BinaryProtocol.cpp  BinarySession.cpp  ClientListener.cpp  ClientServer.cpp  ConnectionManager.cpp  GameServer.cpp  GameSession.cpp  MasterRouter.cpp  MasterServer.cpp  NetworkQualityMonitor.cpp  PredictionSystem.cpp  WebSocketProtocol.cpp  WebSocketSession.cpp
src/process/: IPCChannel.cpp  ProcessPool.cpp
src/scripting/: PythonAPI.cpp  PythonEvent.cpp  PythonModule.cpp  PythonScripting.cpp  ScriptHotReloader.cpp
tests/: client_binary.py  client_websocket.py  tests.sh
